# Pool_Assistant

./: .gitignore  Complete Pool Water Chemistry Manual.txt  README.md  app.py  pyproject.toml  reporte_giskard_vulnerabilidades.html  requirements.txt
src/: graph_db_build.py  qdrant_vector_store.py
src/agent/: agents.py  chains.py  graph.py  nodes.py  pool_agent_demo.ipynb  prompts.py  state.py  test.ipynb  tools.py
src/config/: __init__.py  llm.py
src/data/qdrant_pool_db/: meta.json
src/data/qdrant_pool_db/collection/pool_assistant/: storage.sqlite
tests/: eval_giskard.py
