[project]
name = "POOL_ASSISTANT"
version = "0.1.0"
description = ""
authors = [
    {name = "r3mo",email = "javier.hernandez@xponential.ai"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "striprtf (>=0.0.32,<0.0.33)",
    "spacy (>=3.8.14,<4.0.0)",
    "sentence-transformers (>=5.5.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "langgraph (>=1.2.1,<2.0.0)",
    "langfuse (>=4.6.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "langchain-core (>=1.4.0,<2.0.0)",
    "gradio (>=6.14.0,<7.0.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "langgraph-supervisor (>=0.0.31,<0.0.32)",
]

[tool.poetry]
packages = [{include = "pool_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
